--- a/src/styles/shared/variables.css
+++ b/src/styles/shared/variables.css
@@ -9,12 +9,12 @@
   --highlight-color: #993333;
   --error-color: #cc3333;
 
-  --text-primary: #e6e6e6;
+  --text-primary: #e9e9e9;
   --text-secondary: #222222;
 
   /* Accent colors */
   --accent-teal: #336666;
-  --accent-yellow: #cc9933;
+  --accent-yellow: #e6b566;
   --accent-green: #339966;
   --accent-blue: #3366aa;
   --accent-gradient: none;
